--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxtjs/tailwindcss": "^6.13.2",
     "mongoose": "^8.13.0",
     "nuxt": "^3.16.1",
+    "nuxt-auth-utils": "^0.5.17",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   }
 }
