--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.13.2",
     "mongoose": "^8.13.0",
     "nuxt": "^3.16.1",
@@ -17,5 +18,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.17"
   }
 }
