--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mongoose": "^8.13.0",
     "nuxt": "^3.16.1",
     "nuxt-auth-utils": "^0.5.17",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.2"
